# Soroban-Cookbook-

./: .gitignore  Cargo.toml
docs/: README.md
examples/advanced/01-multi-party-auth/src/: lib.rs  test.rs
examples/advanced/02-timelock/src/: lib.rs
examples/advanced/03-rbac-modifiers/: Cargo.toml  README.md
examples/advanced/03-rbac-modifiers/src/: lib.rs  test.rs
examples/basics/01-hello-world/: Cargo.toml  README.md
examples/basics/01-hello-world/src/: lib.rs
examples/basics/03-authentication/: Cargo.toml
examples/basics/03-authentication/src/: lib.rs  test.rs
examples/basics/03-authentication/test_snapshots/test/: test_auth_success.1.json
examples/basics/04-events/src/: lib.rs  test.rs
examples/basics/05-auth-context/src/: lib.rs  test.rs
examples/basics/05-error-handling/src/: lib.rs
examples/basics/06-type-conversions/src/: lib.rs  test.rs
examples/basics/06-validation-patterns/src/: lib.rs
examples/basics/08-custom-structs/src/: lib.rs
examples/basics/instance-storage/src/: lib.rs
examples/basics/temporary_storage/: Cargo.toml
examples/basics/temporary_storage/src/: lib.rs  test.rs
shared/src/: lib.rs
